When you click on a league it now gives you all of the games for the current week.
